tests/fixtures/invalid/pow_str_set_list.py
# Cannot call pow() with Str, Set[int], List[int]
x = pow("hello", {1, 2, 3}, [1, 2, 3])
